# litres_test_project

./: .env.example  README.md  pyproject.toml  pytest.ini
helper/: api_requests.py  attach_mobile.py  load_schema.py
litres_test_project/pages/mobile_pages/: book_page.py  books_to_read_page.py  main_page.py
litres_test_project/pages/web_pages/: book_page.py  cart_page.py  main_page.py
pages/: book_page.py  main_page.py
pages/mobile_pages/: book_page.py  books_to_read_page.py  main_page.py
tests/: book_search_test.py  conftest.py
tests/api_tests/: test_api_add_book_to_cart.py  test_api_book_search.py  test_api_user_authorization.py
tests/mobile_tests/: config.py  conftest.py
tests/mobile_tests/android/: test_mobile_add_book_to_saved.py  test_mobile_remove_book_from_saved.py  test_mobile_searching_book.py
tests/web_tests/: add_book_to_cart_test.py  book_search_test.py  conftest.py  moving_book_to_favorites_test.py  remove_book_to_cart_test.py  user_authorization_test.py
