[tool.poetry]
name = "litres-test-project"
version = "0.1.0"
description = ""
authors = ["flowerfrog <alexosenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
jsonschema = "^4.20.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
selene = "^2.0.0rc4"
allure-pytest = "^2.13.2"
Appium-Python-Client = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
